--- a/notebooks/convert_address.ipynb
+++ b/notebooks/convert_address.ipynb
@@ -14,7 +14,7 @@
     "geolocator = Nominatim(user_agent=\"2039163698@qq.com\", timeout=10)\n",
     "\n",
     "# Read your CSV file\n",
-    "data = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_1.csv')\n",
+    "data = pd.read_csv('../data/curated/property/property_1.csv')\n",
     "\n",
     "# Create a function to handle address geocoding with retries\n",
     "def geocode_address(address, retries=3):\n",
@@ -59,7 +59,7 @@
     "data['longitude'] = longitudes\n",
     "\n",
     "# Save all processed results to a CSV file, regardless of success\n",
-    "csv_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv'\n",
+    "csv_output_path = '../data/curated/property/property_addresses_to_lat_lng.csv'\n",
     "data.to_csv(csv_output_path, index=False)\n",
     "\n",
     "print(f\"All address data has been saved to {csv_output_path}\")\n"
@@ -80,7 +80,7 @@
     "geolocator = Nominatim(user_agent=\"2039163698@qq.com\", timeout=10)\n",
     "\n",
     "# Read the CSV file\n",
-    "data = pd.read_csv('D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv')\n",
+    "data = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng.csv')\n",
     "\n",
     "# Function to handle address geocoding with retries\n",
     "def geocode_address(address, retries=3):\n",
@@ -113,7 +113,7 @@
     "data.update(no_lat_lng[['latitude', 'longitude']])\n",
     "\n",
     "# Save all results back to the CSV file\n",
-    "csv_output_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv'\n",
+    "csv_output_path = '../data/curated/property/property_addresses_to_lat_lng.csv'\n",
     "data.to_csv(csv_output_path, index=False)\n",
     "\n",
     "print(f\"All address data has been saved to {csv_output_path}\")\n"
@@ -128,14 +128,14 @@
     "import pandas as pd\n",
     "\n",
     "# Load your dataset\n",
-    "file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv'  # Replace with your file path\n",
+    "file_path = '../data/curated/property/property_addresses_to_lat_lng.csv'  # Replace with your file path\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Drop rows that contain NaN values in 'latitude' or 'longitude'\n",
     "cleaned_data = data.dropna(subset=['latitude', 'longitude'])\n",
     "\n",
     "# Save the cleaned data to a new CSV file\n",
-    "output_file_path = 'D:\\STUDYfile\\\\ads2\\\\111ads\\project-2-group-real-estate-industry-project-35\\data\\curated\\property\\property_addresses_to_lat_lng.csv'  # Replace with your desired save path\n",
+    "output_file_path = '../data/curated/property/property_addresses_to_lat_lng.csv'  # Replace with your desired save path\n",
     "cleaned_data.to_csv(output_file_path, index=False)\n",
     "\n",
     "print(\"Rows with missing latitude or longitude have been removed, and the cleaned data has been saved.\")\n"
