--- a/notebooks/calculate_min_cbd_distance.ipynb
+++ b/notebooks/calculate_min_cbd_distance.ipynb
@@ -28,7 +28,8 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# read files of houses and cbd\n",
-    "houses_df = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng_2_final.csv') \n",
+    "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
+    "\n",
     "cbd_df = pd.read_csv('../data/raw/external/melbourne_cbd_coordinates.csv')\n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
