--- a/notebooks/calculate_min_cbd_distance.ipynb
+++ b/notebooks/calculate_min_cbd_distance.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "# read files of houses and cbd\n",
     "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
-    "\n",
     "cbd_df = pd.read_csv('../data/raw/external/melbourne_cbd_coordinates.csv')\n",
+    "cbd_df = cbd_df.rename(columns={'Longitude': 'longitude', 'Latitude': 'latitude'})\n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "cbd_df = cbd_df.dropna(subset=['longitude', 'latitude'])\n",
@@ -65,7 +65,7 @@
     "    geojson.dump(cbd_feature_collection, f)\n",
     "\n",
     "\n",
-    "print(\"Created\")\n"
+    "print(\"Created\")"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "output_path = '../data/curated/external/API/2/closest_cbd_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"Results have been saved to {output_path}\")\n"
+    "print(f\"Results have been saved to {output_path}\")"
    ]
   }
  ],
