--- a/notebooks/cbd_distance4.ipynb
+++ b/notebooks/cbd_distance4.ipynb
@@ -68,7 +68,7 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "api_key = '5b3ce3597851110001cf6248c2b2602de2dc43afa9f186cdfc39caca'  # 请替换为你的 OpenRouteService API Key\n",
+    "api_key = '5b3ce3597851110001cf6248c2b2602de2dc43afa9f186cdfc39caca' \n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
     "### get geo files\n",
