--- a/notebooks/gym_distance2.ipynb
+++ b/notebooks/gym_distance2.ipynb
@@ -2,49 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "房屋和车站的GeoJSON文件已生成\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# 读取房屋和车站的 CSV 文件\n",
-    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_final/property_addresses_to_lat_lng_2_final.csv')  # 替换为你的房屋CSV文件路径\n",
-    "gyms_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_gyms.csv')  # 替换为你的车站CSV文件路径\n",
+    "# read csv\n",
+    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_final/property_addresses_to_lat_lng_2_final.csv')  \n",
+    "gyms_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_gyms.csv')  \n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "gyms_df = gyms_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "\n",
-    "# 创建 GeoJSON Feature 的函数\n",
+    "# create GeoJSON Feature \n",
     "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  # 如果没有 'address' 列，请根据你的实际列修改\n",
+    "        'address': row.get('address', 'unknown'),  \n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# 转换房屋数据为 GeoJSON Feature\n",
+    "# convert GeoJSON Feature\n",
     "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
     "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "# 转换车站数据为 GeoJSON Feature\n",
     "gyms_features = gyms_df.apply(lambda row: create_geojson_feature(row, 'gyms'), axis=1).tolist()\n",
     "gyms_feature_collection = FeatureCollection(gyms_features)\n",
     "\n",
     "\n",
-    "# 保存房屋和车站分别为 GeoJSON 文件\n",
+    "# save files\n",
     "houses_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson'\n",
     "gyms_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/vic_gyms_geojson.geojson'\n",
     "\n",
@@ -55,40 +46,32 @@
     "    geojson.dump(gyms_feature_collection, f)\n",
     "\n",
     "\n",
-    "print(\"房屋和车站的GeoJSON文件已生成\")\n"
+    "print(\"GeoJSON created\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "结果已保存到 /Users/fenglingyi/Downloads/groupwork_generate/closest_gym_distance_final_2.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geojson\n",
     "import openrouteservice\n",
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "# 初始化 OpenRouteService API 客户端\n",
-    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'  # 请替换为你的 OpenRouteService API Key\n",
+    "# initialised OpenRouteService API \n",
+    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "# 读取 GeoJSON 文件\n",
+    "\n",
     "with open('/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
     "with open('/Users/fenglingyi/Downloads/groupwork_generate/vic_gyms_geojson.geojson', 'r') as f:\n",
     "    gyms_geojson = geojson.load(f)\n",
     "\n",
-    "# 提取经纬度\n",
+    "# get coordinates\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -100,11 +83,11 @@
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
     "gyms_coordinates = extract_coordinates(gyms_geojson)\n",
     "\n",
-    "# 提取房屋和车站的经纬度\n",
+    "# get feature's coordinates\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
     "gyms_coords = [(lon, lat) for lat, lon, _ in gyms_coordinates]\n",
     "\n",
-    "# 使用 OpenRouteService API 批量计算距离并按批次处理\n",
+    "# using OpenRouteService API by batches to calculate\n",
     "def calculate_distance_matrix_in_batches(house_coords, gyms_coords, batch_size=12):\n",
     "    all_shortest_distances = []\n",
     "    \n",
@@ -121,9 +104,9 @@
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # 处理每个房屋和车站的距离，找出最短的距离\n",
+    "            # find shortes distance\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
-    "                # 排除 None 值的距离，找出最小距离\n",
+    "\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
@@ -137,27 +120,27 @@
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1)  # 防止触发速率限制\n",
+    "        time.sleep(1)  \n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "# 分批处理\n",
+    "# batch size\n",
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, gyms_coords, batch_size=7)\n",
     "\n",
-    "# 保存最短距离结果为 CSV 文件\n",
+    "# save\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
     "output_path = '/Users/fenglingyi/Downloads/groupwork_final/closest_gym_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"结果已保存到 {output_path}\")\n"
+    "print(f\"saved to {output_path}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "base",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -169,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
