--- a/scripts/crime_count.ipynb
+++ b/scripts/crime_count.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data has been saved to /Users/fenglingyi/Downloads/postcode_crime_count_by_year.csv\n"
+      "Data has been saved to ../data/raw/external/crime_by_year.csv\n"
      ]
     }
    ],
@@ -20,8 +20,9 @@
     "\n",
     "# URL for saving file\n",
     "url = 'https://files.crimestatistics.vic.gov.au/2024-09/Data_Tables_LGA_Recorded_Offences_Year_Ending_June_2024.xlsx'\n",
+    "\n",
     "# Save path to file\n",
-    "save_path = os.path.expanduser(\"~/Documents/GitHub/MAST30034_Python/project-2-group-real-estate-industry-project-35/data/raw/crime_count_21_22_23.xlsx\")\n",
+    "save_path = os.path.expanduser(\"../data/raw/external/crime_count_21_22_23.xlsx\")\n",
     "\n",
     "# Download file\n",
     "response = requests.get(url)\n",
@@ -34,14 +35,11 @@
     "# Select data for the years 2021, 2022, and 2023\n",
     "df_table1_filtered = df_table1[df_table1['Year'].isin([2021, 2022, 2023])]\n",
     "\n",
-    "# Group the data by Postcode and Year to get the crime count for each year separately\n",
-    "postcode_crime_count_by_year = df_table1_filtered.groupby(['Postcode', 'Year'])['Offence Count'].sum().unstack().reset_index()\n",
-    "\n",
-    "# Rename the columns to 2021crime, 2022crime, 2023crime\n",
-    "postcode_crime_count_by_year.columns = ['postcode', '2021crime', '2022crime', '2023crime']\n",
+    "# Group the data by Postcode and Year to get the total crime count\n",
+    "postcode_crime_count_by_year = df_table1_filtered.groupby(['Postcode', 'Year'])['Offence Count'].sum().reset_index()\n",
     "\n",
     "# Save the result to a new CSV file\n",
-    "output_path = os.path.expanduser(\"~/Documents/GitHub/MAST30034_Python/project-2-group-real-estate-industry-project-35/data/curated/crime_by_year.csv\")\n",
+    "output_path = os.path.expanduser(\"../data/curated/external/crime_by_year.csv\")\n",
     "postcode_crime_count_by_year.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"Data has been saved to {output_path}\")"
@@ -64,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.5"
   },
   "orig_nbformat": 4
  },
