--- a/notebooks/Price_2021_2023.ipynb
+++ b/notebooks/Price_2021_2023.ipynb
@@ -440,6 +440,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "url = 'https://github.com/Elkfox/Australian-Postcode-Data/blob/master/au_postcodes.csv'\n",
+    "\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open('../data/raw//externel/au_postcodes.csv', 'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"files saved as 'au_postcodes.csv'\")\n",
+    "else:\n",
+    "    print(f\"download failed: {response.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('../data/raw//externel/au_postcodes.csv')\n",
+    "data = data[data['state'] == 'VIC']\n",
+    "data.to_csv('../data/raw/external/au_postcodes.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -885,6 +915,13 @@
     "\n",
     "print(f'The processed file has been saved to: {output_path}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
