--- a/models/xgboost.ipynb
+++ b/models/xgboost.ipynb
@@ -209,7 +209,10 @@
     "plt.ylabel('Features')\n",
     "plt.title('XGboost Feature Importance (Based on Gain)')\n",
     "plt.gca().invert_yaxis()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Save the chart as a PNG file\n",
+    "plt.savefig('../plots/feature_importance_xgboost.png', format='png', bbox_inches='tight')\n"
    ]
   },
   {
