--- a/models/xgboost.ipynb
+++ b/models/xgboost.ipynb
@@ -209,6 +209,7 @@
     "plt.ylabel('Features')\n",
     "plt.title('XGboost Feature Importance (Based on Gain)')\n",
     "plt.gca().invert_yaxis()\n",
+    "plt.savefig('../plots/xg_importance.png')\n",
     "plt.show()\n"
    ]
   },
