--- a/notebooks/rf.ipynb
+++ b/notebooks/rf.ipynb
@@ -184,7 +184,8 @@
     "plt.barh(feature_importance_df['Feature'], feature_importance_df['Importance'], color='skyblue')\n",
     "plt.xlabel('Feature Importance')\n",
     "plt.title('Random Forest Feature Importance')\n",
-    "plt.gca().invert_yaxis()  # 使得最重要的特征在最上面\n",
+    "plt.gca().invert_yaxis()\n",
+    "plt.savefig('../plots/rf_importance.png')\n",
     "plt.show()\n"
    ]
   }
