--- a/notebooks/SA2.ipynb
+++ b/notebooks/SA2.ipynb
@@ -246,7 +246,7 @@
     "\n",
     "plt.grid(True)\n",
     "\n",
-    "\n",
+    "plt.savefig('../plots/population.png')\n",
     "plt.show()\n",
     "\n"
    ]
