--- a/models/arima with growth rate.ipynb
+++ b/models/arima with growth rate.ipynb
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### growth rate of xgboost"
+    "### map growth rate of xgboost"
    ]
   },
   {
