--- a/models/liveability.ipynb
+++ b/models/liveability.ipynb
@@ -180,12 +180,12 @@
     "\n",
     "df_1['combined_score'] = (df_1['livability_score']* 0.5 + df_1['affordability_score'] * 0.5)\n",
     "\n",
-    "df_1.to_csv('../data/curated/combine_score.csv')\n",
-    "\n",
     "### get top 10\n",
     "top_10 = df_1.sort_values(by='combined_score', ascending=False)\n",
     "top_10 = top_10.drop_duplicates('Suburb')\n",
-    "top_10[['Suburb', 'livability_score','affordability_score', 'combined_score']].iloc[0:10]"
+    "top_10[['Suburb', 'livability_score','affordability_score', 'combined_score']].iloc[0:10]\n",
+    "score = top_10[['Suburb', 'livability_score','affordability_score', 'combined_score']]\n",
+    "score.to_csv('../data/curated/combine_score.csv')"
    ]
   }
  ],
