--- a/models/liveability.ipynb
+++ b/models/liveability.ipynb
@@ -153,7 +153,7 @@
     "distance_columns = ['minimum_distance_school', 'minimum_distance_police', \n",
     "                    'minimum_distance_station', 'minimum_distance_supermarket', \n",
     "                    'minimum_distance_library']\n",
-    "df_1[distance_columns] = scaler.fit_transform(df[distance_columns])\n",
+    "df_1[distance_columns] = scaler.fit_transform(data_[distance_columns])\n",
     "\n",
     "### get the weight \n",
     "distance_weights = {\n",
