--- a/summary notebook.ipynb
+++ b/summary notebook.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "Image(\"/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/plots/heatmap_inner.png\")"
+    "Image(\"plots/heatmap_inner.png\")"
    ]
   },
   {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "Image(\"/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/plots/population.png\")"
+    "Image(\"plots/population.png\")"
    ]
   },
   {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "Image(\"/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/plots/crime count.png\")"
+    "Image(\"plots/crime count.png\")"
    ]
   },
   {
@@ -221,8 +221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We get the conclusion from the follwing graphs: Random Foresdt feature importance and XGBoost feature importance "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +239,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,12 +247,12 @@
    "source": [
     "from IPython.display import Image\n",
     "\n",
-    "Image(\"/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/plots/rf_importance.png\")"
+    "Image(\"plots/rf_importance.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,13 +262,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(\"/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/plots/xg_importance.png\")"
+    "Image(\"plots/xg_importance.png\")"
    ]
   },
   {
@@ -289,8 +296,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our model generate the 5-year prediction then we calculate each year's growth rate then select the rapid ones in 3-year.\n",
+    "\n",
+    "Following is how each location appears on the map"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -300,13 +316,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(\"/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/plots/TOP10 suburb.png\")"
+    "Image(\"plots/TOP10 suburb.png\")"
    ]
   },
   {
@@ -403,8 +419,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the formula of calculation:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\text{livability\\_score} = \\frac{\\sum_{i=1}^{n} \\left( \\text{standardized\\_distance}_i \\times \\text{weight}_i \\right) + \\text{crime\\_score} \\times 0.25}{\\sum_{i=1}^{n} \\text{weight}_i + 1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{affordability\\_score}=1−\\text{standardized\\_affordability\\_ratio}\n",
+    "$$\n",
+    "$$\n",
+    "\\text{combined\\_score} = 0.5 × \\text{livability\\_score} + 0.5 × \\text{affordability\\_score}\n",
+    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The weight value is referenced to the The Economist Intelligence Unit\n",
+    "http://chinese.seoul.go.kr/gtk/gcs/download/R46_Maturity%20of%20Community%20(Liveability%20ranking%20and%20overview_Feb%202013).pdf\n",
+    "\n",
+    "The affordable is assumed 30% of the weekly income which is referenced from International Housing Association. https://www.internationalhousingassociation.org/fileUpload_details.aspx?contentTypeID=3&contentID=254954&subContentID=725161&channelID=38488\n",
+    "\n",
+    "Also, cannot find the propertion of liveability and affordability so we choose weighted 0.5 of each.\n",
+    "\n",
+    "The following table shows the combine score of the top 10 suburbs:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -546,52 +600,16 @@
        "9        0.638085  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd \n",
-    "data = pd.read_csv('/Users/qi/Documents/GitHub/project-2-group-real-estate-industry-project-35/data/curated/external/combine_score.csv')\n",
+    "data = pd.read_csv('data/curated/external/combine_score.csv')\n",
     "results = data.sort_values(by='combined_score', ascending=False)\n",
     "results.iloc[0:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is the formula of calculation:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\text{livability\\_score} = \\frac{\\sum_{i=1}^{n} \\left( \\text{standardized\\_distance}_i \\times \\text{weight}_i \\right) + \\text{crime\\_score} \\times 0.25}{\\sum_{i=1}^{n} \\text{weight}_i + 1}\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\text{affordability\\_score}=1−\\text{standardized\\_affordability\\_ratio}\n",
-    "$$\n",
-    "$$\n",
-    "\\text{combined\\_score} = 0.5 × \\text{livability\\_score} + 0.5 × \\text{affordability\\_score}\n",
-    "\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The weight value is referenced to the The Economist Intelligence Unit\n",
-    "http://chinese.seoul.go.kr/gtk/gcs/download/R46_Maturity%20of%20Community%20(Liveability%20ranking%20and%20overview_Feb%202013).pdf\n",
-    "\n",
-    "The affordable is assumed 30% of the weekly income which is referenced from International Housing Association. https://www.internationalhousingassociation.org/fileUpload_details.aspx?contentTypeID=3&contentID=254954&subContentID=725161&channelID=38488\n",
-    "\n",
-    "Also, cannot find the propertion of liveability and affordability so we choose weighted 0.5 of each."
    ]
   },
   {
@@ -608,7 +626,8 @@
     "- postcode: some inconsistencies in abbreviations and capitalization for each dataset, which can only be manually corrected.\n",
     "- the crime rate in CBD:  is too high, which can affect the accuracy of the model when used. \n",
     "- population data: it only covers permanent residents and does not take into account important groups such as international students.\n",
-    "- price: when standardlise the \n"
+    "- price: the price in the different various format, when converting to the weekly price it may contain some outliers which may affect the accuracy of the model when used.\n",
+    "- models: the value of R sqaure are not good although we have already adjusted the model's parameters, may investiagte more models in future.\n"
    ]
   },
   {
