Update arima with growth rate.ipynb

--- a/models/arima with growth rate.ipynb
+++ b/models/arima with growth rate.ipynb
@@ -56,6 +56,7 @@
     "   \n",
     "    suburb_data = suburb_time_series[df_no_nulls['Suburb'] == suburb].values.flatten()\n",
     "    model = ARIMA(suburb_data, order=(1, 0, 0))\n",
+    "    model_fit = model.fit()\n",
     "    forecast = model_fit.forecast(steps=3)\n",
     "    \n",
     "    predictions[suburb] = forecast\n",
@@ -239,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### growth rate of xgboost"
+    "### map growth rate of xgboost"
    ]
   },
   {
