--- a/notebooks/gym_distance2.ipynb
+++ b/notebooks/gym_distance2.ipynb
@@ -11,8 +11,8 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# read csv\n",
-    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_final/property_addresses_to_lat_lng_2_final.csv')  \n",
-    "gyms_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_gyms.csv')  \n",
+    "houses_df = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng_2_final.csv')  \n",
+    "gyms_df = pd.read_csv('../data/raw/external/victoria_gyms.csv')  \n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "gyms_df = gyms_df.dropna(subset=['longitude', 'latitude'])\n",
@@ -36,8 +36,8 @@
     "\n",
     "\n",
     "# save files\n",
-    "houses_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson'\n",
-    "gyms_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/vic_gyms_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/2/property_geojson.geojson'\n",
+    "gyms_geojson_output_path = '../data/raw/external/API/2/vic_gyms_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(house_feature_collection, f)\n",
@@ -65,10 +65,10 @@
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
     "\n",
-    "with open('/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/2/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('/Users/fenglingyi/Downloads/groupwork_generate/vic_gyms_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/2/vic_gyms_geojson.geojson', 'r') as f:\n",
     "    gyms_geojson = geojson.load(f)\n",
     "\n",
     "# get coordinates\n",
@@ -129,7 +129,7 @@
     "\n",
     "# save\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = '/Users/fenglingyi/Downloads/groupwork_final/closest_gym_distance_final_2.csv'\n",
+    "output_path = '../data/curated/external/API/2/closest_gym_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
     "print(f\"saved to {output_path}\")\n"
