--- a/notebooks/gym_distance2.ipynb
+++ b/notebooks/gym_distance2.ipynb
@@ -11,7 +11,7 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# read csv\n",
-    "houses_df = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng_2_final.csv')  \n",
+    "houses_df = pd.read_csv('..data/curated/property/property 2.csv')  \n",
     "gyms_df = pd.read_csv('../data/raw/external/victoria_gyms.csv')  \n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
