--- a/notebooks/library_distance2.ipynb
+++ b/notebooks/library_distance2.ipynb
@@ -18,7 +18,7 @@
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "houses_df = pd.read_csv('../data/curated/property/property_addresses_to_lat_lng_2_final.csv') \n",
+    "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
     "librarys_df = pd.read_csv('../data/raw/external/victoria_libraries.csv') \n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "librarys_df = librarys_df.dropna(subset=['longitude', 'latitude'])\n",
