--- a/notebooks/station_distance2.ipynb
+++ b/notebooks/station_distance2.ipynb
@@ -19,8 +19,8 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# 读取房屋和车站的 CSV 文件\n",
-    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_generate/property_addresses_to_lat_lng_2_final.csv')  # 替换为你的房屋CSV文件路径\n",
-    "stations_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_metro_stations.csv')  # 替换为你的车站CSV文件路径\n",
+    "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
+    "stations_df = pd.read_csv('../data/raw/external/victoria_metro_stations.csv')  # 替换为你的车站CSV文件路径\n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "stations_df = stations_df.dropna(subset=['longitude', 'latitude'])\n",
