--- a/notebooks/police_distance1.ipynb
+++ b/notebooks/police_distance1.ipynb
@@ -11,7 +11,9 @@
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
     "# Read the police station CSV file\n",
+    "houses_df = pd.read_csv('..data/curated/property/property 2.csv')\n",
     "market_df = pd.read_csv('../data/raw/external/victoria_police_stations.csv')\n",
+    "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "market_df = market_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "# Function to create GeoJSON Features\n",
