--- a/notebooks/market_distance2.ipynb
+++ b/notebooks/market_distance2.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "\n",
     "# 读取上传的 CSV 文件\n",
-    "file_path = '/Users/fenglingyi/Downloads/groupwork_final/property_addresses_to_lat_lng_2_final.csv'\n",
+    "file_path = '..data/curated/property/property 2.csv'\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# 计算中间位置，将数据分为两份\n",
