--- a/notebooks/station_distance2.ipynb
+++ b/notebooks/station_distance2.ipynb
@@ -18,9 +18,8 @@
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# 读取房屋和车站的 CSV 文件\n",
     "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
-    "stations_df = pd.read_csv('../data/raw/external/victoria_metro_stations.csv')  # 替换为你的车站CSV文件路径\n",
+    "stations_df = pd.read_csv('../data/raw/external/victoria_metro_stations.csv')\n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "stations_df = stations_df.dropna(subset=['longitude', 'latitude'])\n",
@@ -29,23 +28,19 @@
     "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  # 如果没有 'address' 列，请根据你的实际列修改\n",
+    "        'address': row.get('address', 'unknown'), \n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# 转换房屋数据为 GeoJSON Feature\n",
     "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
     "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "# 转换车站数据为 GeoJSON Feature\n",
     "station_features = stations_df.apply(lambda row: create_geojson_feature(row, 'station'), axis=1).tolist()\n",
     "station_feature_collection = FeatureCollection(station_features)\n",
     "\n",
-    "\n",
-    "# 保存房屋和车站分别为 GeoJSON 文件\n",
-    "houses_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson'\n",
-    "stations_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/vic_metro_stations_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/2/property_geojson.geojson'\n",
+    "stations_geojson_output_path = '../data/raw/external/API/2/vic_metro_stations_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(house_feature_collection, f)\n",
@@ -54,7 +49,7 @@
     "    geojson.dump(station_feature_collection, f)\n",
     "\n",
     "\n",
-    "print(\"房屋和车站的GeoJSON文件已生成\")"
+    "print(\"Created\")"
    ]
   },
   {
@@ -76,18 +71,16 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "# 初始化 OpenRouteService API 客户端\n",
-    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'  # 请替换为你的 OpenRouteService API Key\n",
+    "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30'\n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "# 读取 GeoJSON 文件\n",
-    "with open('/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/2/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('/Users/fenglingyi/Downloads/groupwork_generate/vic_metro_stations_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/2/vic_metro_stations_geojson.geojson', 'r') as f:\n",
     "    stations_geojson = geojson.load(f)\n",
     "\n",
-    "# 提取经纬度\n",
+    "\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -99,11 +92,10 @@
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
     "station_coordinates = extract_coordinates(stations_geojson)\n",
     "\n",
-    "# 提取房屋和车站的经纬度\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
     "station_coords = [(lon, lat) for lat, lon, _ in station_coordinates]\n",
     "\n",
-    "# 使用 OpenRouteService API 批量计算距离并按批次处理\n",
+    "\n",
     "def calculate_distance_matrix_in_batches(house_coords, station_coords, batch_size=12):\n",
     "    all_shortest_distances = []\n",
     "    \n",
@@ -120,9 +112,9 @@
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # 处理每个房屋和车站的距离，找出最短的距离\n",
+    "            \n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
-    "                # 排除 None 值的距离，找出最小距离\n",
+    "                \n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
@@ -136,19 +128,18 @@
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1)  # 防止触发速率限制\n",
+    "        time.sleep(1)  \n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "# 分批处理\n",
+    "\n",
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, station_coords, batch_size=12)\n",
     "\n",
-    "# 保存最短距离结果为 CSV 文件\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = '/Users/fenglingyi/Downloads/groupwork_final/closest_stations_distance_final_2.csv'\n",
+    "output_path = '../data/curated/external/API/2/closest_stations_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"结果已保存到 {output_path}\")\n"
+    "print(f\"saved to {output_path}\")\n"
    ]
   }
  ],
