--- a/notebooks/police_distance2.ipynb
+++ b/notebooks/police_distance2.ipynb
@@ -18,35 +18,30 @@
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
-    "# 读取房屋和车站的 CSV 文件\n",
-    "houses_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_final/property_addresses_to_lat_lng_2_final.csv')  # 替换为你的房屋CSV文件路径\n",
-    "supermarkets_df = pd.read_csv('/Users/fenglingyi/Downloads/groupwork_file/victoria_supermarkets.csv')  # 替换为你的车站CSV文件路径\n",
+    "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
+    "supermarkets_df = pd.read_csv('../data/raw/external/victoria_supermarkets.csv') \n",
     "\n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "supermarkets_df = supermarkets_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
     "\n",
-    "# 创建 GeoJSON Feature 的函数\n",
     "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
-    "        'address': row.get('address', 'unknown'),  # 如果没有 'address' 列，请根据你的实际列修改\n",
+    "        'address': row.get('address', 'unknown'), \n",
     "        'type': feature_type\n",
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
-    "# 转换房屋数据为 GeoJSON Feature\n",
     "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
     "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
-    "# 转换车站数据为 GeoJSON Feature\n",
     "supermarkets_features = supermarkets_df.apply(lambda row: create_geojson_feature(row, 'supermarkets'), axis=1).tolist()\n",
     "supermarkets_feature_collection = FeatureCollection(supermarkets_features)\n",
     "\n",
     "\n",
-    "# 保存房屋和车站分别为 GeoJSON 文件\n",
-    "houses_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson'\n",
-    "supermarkets_geojson_output_path = '/Users/fenglingyi/Downloads/groupwork_generate/vic_supermarkets_geojson.geojson'\n",
+    "houses_geojson_output_path = '../data/raw/external/API/2/property_geojson.geojson'\n",
+    "supermarkets_geojson_output_path = '../data/raw/external/API/2/vic_supermarkets_geojson.geojson'\n",
     "\n",
     "with open(houses_geojson_output_path, 'w') as f:\n",
     "    geojson.dump(house_feature_collection, f)\n",
@@ -55,7 +50,7 @@
     "    geojson.dump(supermarkets_feature_collection, f)\n",
     "\n",
     "\n",
-    "print(\"房屋和车站的GeoJSON文件已生成\")\n"
+    "print(\"created\")\n"
    ]
   },
   {
@@ -82,18 +77,15 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
-    "# 初始化 OpenRouteService API 客户端\n",
-    "api_key = '5b3ce3597851110001cf6248dfd6833040c341ebb4797f7491012ac1'  # 请替换为你的 OpenRouteService API Key\n",
+    "api_key = '5b3ce3597851110001cf6248dfd6833040c341ebb4797f7491012ac1' \n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
-    "# 读取 GeoJSON 文件\n",
-    "with open('/Users/fenglingyi/Downloads/groupwork_generate/property_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/2/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
-    "with open('/Users/fenglingyi/Downloads/groupwork_generate/vic_supermarkets_geojson.geojson', 'r') as f:\n",
+    "with open('../data/raw/external/API/2/vic_supermarkets_geojson.geojson', 'r') as f:\n",
     "    supermarkets_geojson = geojson.load(f)\n",
     "\n",
-    "# 提取经纬度\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -105,11 +97,9 @@
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
     "supermarkets_coordinates = extract_coordinates(supermarkets_geojson)\n",
     "\n",
-    "# 提取房屋和车站的经纬度\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
     "supermarkets_coords = [(lon, lat) for lat, lon, _ in supermarkets_coordinates]\n",
     "\n",
-    "# 使用 OpenRouteService API 批量计算距离并按批次处理\n",
     "def calculate_distance_matrix_in_batches(house_coords, supermarkets_coords, batch_size=2):\n",
     "    all_shortest_distances = []\n",
     "    \n",
@@ -126,9 +116,7 @@
     "            )\n",
     "            distances = matrix['distances']\n",
     "            \n",
-    "            # 处理每个房屋和车站的距离，找出最短的距离\n",
     "            for j, house_distances in enumerate(distances[:len(batch_houses)]):\n",
-    "                # 排除 None 值的距离，找出最小距离\n",
     "                valid_distances = [d for d in house_distances if d is not None]\n",
     "                if valid_distances:\n",
     "                    min_distance = min(valid_distances)\n",
@@ -142,19 +130,18 @@
     "                    })\n",
     "        except Exception as e:\n",
     "            print(f\"Error calculating distance matrix: {e}\")\n",
-    "        time.sleep(1)  # 防止触发速率限制\n",
+    "        time.sleep(1) \n",
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "# 分批处理\n",
+    "\n",
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, supermarkets_coords, batch_size=2)\n",
     "\n",
-    "# 保存最短距离结果为 CSV 文件\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
-    "output_path = '/Users/fenglingyi/Downloads/groupwork_final/closest_supermarkets_distance_final_2.csv'\n",
+    "output_path = '../data/curated/external/API/2/closest_supermarkets_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
     "\n",
-    "print(f\"结果已保存到 {output_path}\")\n"
+    "print(f\"saved to {output_path}\")\n"
    ]
   }
  ],
