--- a/notebooks/cbd_distance4.ipynb
+++ b/notebooks/cbd_distance4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geojson created\n"
+     ]
+    }
+   ],
    "source": [
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
@@ -59,9 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved ../data/curated/external/API/4/closest_cbd_distance_final_4.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import geojson\n",
     "import openrouteservice\n",
