--- a/models/xgboost.ipynb
+++ b/models/xgboost.ipynb
@@ -2,6 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "file_path = '../data/curated/external/final_file.csv'\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "population_2021 = data['2021_population']\n",
+    "population_2022 = data['2022_population']\n",
+    "population_2023 = data['2023_population']\n",
+    "\n",
+    "crime_2021 = data['2021crime']\n",
+    "crime_2022 = data['2022crime']\n",
+    "crime_2023 = data['2023crime']\n",
+    "\n",
+    "# Calculated population growth rate\n",
+    "population_growth_rate_21_22 = (population_2022 - population_2021) / population_2021 * 100\n",
+    "population_growth_rate_22_23 = (population_2023 - population_2022) / population_2022 * 100\n",
+    "average_population_growth_rate_21_23 = (population_growth_rate_21_22 + population_growth_rate_22_23) / 2\n",
+    "\n",
+    "# Calculated crime growth rate\n",
+    "crime_growth_rate_21_22 = (crime_2022 - crime_2021) / crime_2021 * 100\n",
+    "crime_growth_rate_22_23 = (crime_2023 - crime_2022) / crime_2022 * 100\n",
+    "average_crime_growth_rate_21_23 = (crime_growth_rate_21_22 + crime_growth_rate_22_23) / 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
