--- a/notebooks/library_distance2.ipynb
+++ b/notebooks/library_distance2.ipynb
@@ -18,12 +18,13 @@
     "import geojson\n",
     "from geojson import Feature, Point, FeatureCollection\n",
     "\n",
+    "# read files of houses and cbd\n",
     "houses_df = pd.read_csv('..data/curated/property/property 2.csv') \n",
     "librarys_df = pd.read_csv('../data/raw/external/victoria_libraries.csv') \n",
     "houses_df = houses_df.dropna(subset=['longitude', 'latitude'])\n",
     "librarys_df = librarys_df.dropna(subset=['longitude', 'latitude'])\n",
     "\n",
-    "\n",
+    "# convert geojson\n",
     "def create_geojson_feature(row, feature_type='house'):\n",
     "    point = Point((row['longitude'], row['latitude']))\n",
     "    properties = {\n",
@@ -32,13 +33,15 @@
     "    }\n",
     "    return Feature(geometry=point, properties=properties)\n",
     "\n",
+    "# convert data of houses into GeoJSON Feature\n",
     "house_features = houses_df.apply(lambda row: create_geojson_feature(row, 'house'), axis=1).tolist()\n",
     "house_feature_collection = FeatureCollection(house_features)\n",
     "\n",
+    "# convert data of cbd GeoJSON Feature\n",
     "librarys_features = librarys_df.apply(lambda row: create_geojson_feature(row, 'librarys'), axis=1).tolist()\n",
     "librarys_feature_collection = FeatureCollection(librarys_features)\n",
     "\n",
-    "\n",
+    "# Save the house and station as GeoJSON files respectively\n",
     "houses_geojson_output_path = '../data/raw/external/API/2/property_geojson.geojson'\n",
     "librarys_geojson_output_path = '../data/raw/external/API/2/vic_libraries_geojson.geojson'\n",
     "\n",
@@ -71,15 +74,18 @@
     "import pandas as pd\n",
     "import time\n",
     "\n",
+    "# OpenRouteService API\n",
     "api_key = '5b3ce3597851110001cf6248dda07331ae64496fa25c4e54b59fba30' \n",
     "client = openrouteservice.Client(key=api_key)\n",
     "\n",
+    "# read GeoJSON file\n",
     "with open('../data/raw/external/API/2/property_geojson.geojson', 'r') as f:\n",
     "    rent_geojson = geojson.load(f)\n",
     "\n",
     "with open('../data/raw/external/API/2/vic_libraries_geojson.geojson', 'r') as f:\n",
     "    librarys_geojson = geojson.load(f)\n",
     "\n",
+    "# Extract latitude and longitude\n",
     "def extract_coordinates(features):\n",
     "    coordinates = []\n",
     "    for feature in features['features']:\n",
@@ -91,9 +97,11 @@
     "rent_coordinates = extract_coordinates(rent_geojson)\n",
     "librarys_coordinates = extract_coordinates(librarys_geojson)\n",
     "\n",
+    "# Extract the latitude and longitude of the house and libraries\n",
     "house_coords = [(lon, lat) for lat, lon, _ in rent_coordinates]\n",
     "librarys_coords = [(lon, lat) for lat, lon, _ in librarys_coordinates]\n",
     "\n",
+    "# use OpenRouteService API calculate distances in batches and process them in batches\n",
     "def calculate_distance_matrix_in_batches(house_coords, librarys_coords, batch_size=12):\n",
     "    all_shortest_distances = []\n",
     "    \n",
@@ -128,9 +136,10 @@
     "    \n",
     "    return all_shortest_distances\n",
     "\n",
-    "\n",
+    "# Batch processing\n",
     "shortest_distances = calculate_distance_matrix_in_batches(house_coords, librarys_coords, batch_size=20)\n",
     "\n",
+    "# Save the shortest distance results as a CSV file\n",
     "shortest_distances_df = pd.DataFrame(shortest_distances)\n",
     "output_path = '../data/curated/external/API/2/closest_library_distance_final_2.csv'\n",
     "shortest_distances_df.to_csv(output_path, index=False)\n",
