--- a/models/rf.ipynb
+++ b/models/rf.ipynb
@@ -94,8 +94,9 @@
     "# In order of importance\n",
     "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
     "\n",
-    "# Output feature importance\n",
-    "print(feature_importance_df)"
+    "# Saving the feature importance DataFrame to a CSV file\n",
+    "output_file_path = '../data/curated/external/rf_feature_importance.csv'\n",
+    "feature_importance_df.to_csv(output_file_path, index=False)"
    ]
   },
   {
