--- a/models/xgboost.ipynb
+++ b/models/xgboost.ipynb
@@ -122,6 +122,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Get feature importances\n",
+    "importances = best_model.feature_importances_\n",
+    "\n",
+    "# Create a DataFrame to combine feature names and their importance values\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    'Feature': X.columns,\n",
+    "    'Importance': importances\n",
+    "})\n",
+    "\n",
+    "# Sort the DataFrame by importance in descending order\n",
+    "feature_importance_df = feature_importance_df.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# Saving the feature importance DataFrame to a CSV file\n",
+    "output_file_path = '../data/curated/external/xgboost_feature_importance.csv'\n",
+    "feature_importance_df.to_csv(output_file_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
